LuxStudio/depl/overlays/pluto/patch-deployment-luxapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxapi-deployment
spec:
  template:
    spec:
      containers:
        - name: luxapi-container
          image: luxoria/luxapi
          imagePullPolicy: Always
