LuxStudio/depl/overlays/pluto/patch-deployment-luxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxdb
  namespace: pluto
