LuxStudio/depl/overlays/pluto/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxstudio-deployment
spec:
  template:
    spec:
      containers:
        - name: luxstudio-container
          image: luxoria/luxstudio:dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxapi
spec:
  template:
    spec:
      containers:
        - name: luxapi
          image: luxoria/luxapi:dev
