LuxStudio/depl/overlays/pluto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luxstudio-production
  namespace: pluto
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: bucket.pluto.luxoria.bluepelicansoft.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: console.bucket.pluto.luxoria.bluepelicansoft.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
    - host: studio.pluto.luxoria.bluepelicansoft.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: luxstudio-service
                port:
                  number: 80
    - host: api.studio.pluto.luxoria.bluepelicansoft.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: luxapi-service
                port:
                  number: 8080
  tls:
    - hosts:
        - bucket.pluto.luxoria.bluepelicansoft.com
        - console.bucket.pluto.luxoria.bluepelicansoft.com
        - studio.pluto.luxoria.bluepelicansoft.com
        - api.studio.pluto.luxoria.bluepelicansoft.com
      secretName: luxstudio-pluto-luxoria
